Correcting syntax error

--- a/config/database.yml
+++ b/config/database.yml
@@ -87,8 +87,7 @@ test:
 #
 production:
   <<: *default
-  database: recipe
-  _production
+  database: recipe_production
   username: postgres
   password: R@fi0123
   host: localhost
